--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
-Options -MultiViews -Indexes
-DirectoryIndex index.html
-
-RewriteEngine On
-
-RewriteCond %{REQUEST_FILENAME} !-f
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^(www.)?rafaeljesusaraiva.pt$
+RewriteCond %{REQUEST_URI} !^/www/
+RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ /www/index.html [L]
+RewriteRule ^(.*)$ /www/$1
+RewriteCond %{HTTP_HOST} ^(www.)?rafaeljesusaraiva.pt$ 
+RewriteRule ^(/)?$ www/index.html [L]
